tests/test_compile/cases/enum_validation.stderr
error: `id_type` or `id` must be specified on enum
 --> $DIR/enum_validation.rs:5:6
  |
5 | enum Test1 {}
  |      ^^^^^

error: conflicting: both `id_type` and `id` specified on enum
  --> $DIR/enum_validation.rs:10:6
   |
10 | enum Test2 {}
   |      ^^^^^

error: conflicting: both `id` and `id_pat` specified on variant
  --> $DIR/enum_validation.rs:16:17
   |
16 |     #[deku(id = "1", id_pat = "2..=3")]
   |                 ^^^

error: `id_type` only supported on enum
  --> $DIR/enum_validation.rs:22:18
   |
22 | #[deku(id_type = "u8")]
   |                  ^^^^

error: `bits` only supported on enum
  --> $DIR/enum_validation.rs:29:15
   |
29 | #[deku(bits = "1")]
   |               ^^^

error: `bits` only supported on enum
  --> $DIR/enum_validation.rs:36:15
   |
36 | #[deku(bits = "1")]
   |               ^^^

error: `id_type` only supported on enum
  --> $DIR/enum_validation.rs:43:18
   |
43 | #[deku(id_type = "test")]
   |                  ^^^^^^

error: DekuRead: `id` must be specified on non-unit variants
  --> $DIR/enum_validation.rs:52:5
   |
52 |     A,
   |     ^

error: DekuRead: `id` must be specified on non-unit variants
  --> $DIR/enum_validation.rs:59:5
   |
59 |     A,
   |     ^

error: error: `id_pat` should be used for `_`
  --> $DIR/enum_validation.rs:67:5
   |
67 |     A,
   |     ^

error: DekuRead: `id` must be specified on non-unit variants
  --> $DIR/enum_validation.rs:76:5
   |
76 |     B(u8),
   |     ^
